tests/semantic/invalid/12_break_outside_loop.tc
// 非法测试12: break语句不在循环内
// 目标：应报错 SEM_BREAK_OUTSIDE_LOOP
int main(void) {
    break;  // break必须位于循环内
    return 0;
}
